# V2-Robot-Arm

./: .gitignore  README.md  project_requirements.md  serial_test_printer.py
CAD/axis 2, link 2-3/: axis 2.FCStd  axis 2.FCStd1
CAD/axis_0/: axis_0-a0 gearbox bottom base.stl  axis_0-a0 gearbox bottom cover.stl  axis_0-a0 gearbox internal cycloidal.stl  axis_0-a0 magnet holder.stl  axis_0-a1 base.stl  axis_0-featured cycloidal gear A.stl  axis_0-featured cycloidal gear B.stl  axis_0.FCStd  axis_0.FCStd1
CAD/axis_1/: axis_1-a0 motor bracket.stl  axis_1-a1 base.stl  axis_1-a1 encoder bracket.stl  axis_1-a1 motor bracket.stl  axis_1-a1 motor side gearbox bracket.stl  axis_1-a1 nonmotor side gearbox bracket.stl  axis_1-internal clamp support.stl  axis_1.FCStd  axis_1.FCStd1
CAD/axis_2/: axis_2.FCStd  axis_2.FCStd1
CAD/axis_3/: axis_3.FCStd
CAD/v3 cycloidal actuator/: v3 cycloidal actuator main.FCStd  v3 cycloidal actuator mian.FCStd
CAD/v3_cycloidal_actuator/: offset_cam_testing.FCStd  offset_cam_testing.FCStd1  shaft_attaching_testing-nema23 x 31.32mm input mount.stl  shaft_attaching_testing.FCStd  (+15 more)
project_documents/: .$model_GUI_layout.drawio.bkp  .$model_ROS_diagram.drawio.bkp  .$model_ROS_diagram.drawio.dtmp  ROS_system_writeup.md  model_GUI_layout.drawio  model_ROS_diagram.drawio  project_requirements.md
software/ros2/src/v2_robot_arm_interfaces/: CMakeLists.txt
software/ros2/src/v2_robot_arm_interfaces/msg/: CurrentEEInfo.msg  CurrentJointInfo.msg  TargetCartesian.msg
software/ros2/src/v2_robot_arm_interfaces/srv/: SystemStatus.srv
(+343 files in other folders)
